fixed issue with main not being committed